Fix spacing of logo and main-menu-root

--- a/assets/sass/organisms/_header.scss
+++ b/assets/sass/organisms/_header.scss
@@ -66,10 +66,6 @@ div[id$="-layoutheaderblock"] {
 
   .logo-retraitespopulaires-offset {
     margin-left: -20px;
-
-    @media screen and (min-width: $screen-md-min) {
-      margin-left: -6.5rem;
-    }
   }
 
   [class*="theme-"] & {
@@ -78,6 +74,10 @@ div[id$="-layoutheaderblock"] {
 }
 
 .main-menu-root {
+  display: -webkit-box;
+  list-style: none;
+  padding-left: 0;
+
   @media screen and (max-width: $screen-md-min) {
     &:not(.mobile) {
       display: none;
@@ -87,9 +87,6 @@ div[id$="-layoutheaderblock"] {
   :not(.mobile) {
     margin-top: 9.5px;
   }
-
-  display: -webkit-box;
-  list-style: none;
 
   li {
     margin-right: 20px;
